Implemented propagation of JWT from the dashboard to the services (session, vote)